# colfin-harness

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: discord-bot.md  order-entry.md  read-only-agents.md
src/colfin_harness/: __init__.py  __main__.py  config.py  conversation.py  credentials.py  discord_bot.py  exceptions.py  keychain.py  schemas.py
src/colfin_harness/agents/: __init__.py  base.py  market_info.py  order_entry.py  portfolio.py  quotes.py  research.py
src/colfin_harness/model/: __init__.py  runtime.py
src/colfin_harness/orchestrator/: __init__.py  (+2 more)
tests/: conftest.py  test_context_threading.py  test_credentials.py  test_discord_bot.py  test_headless_ua.py  test_keychain.py  test_market_info_parser.py  test_model_selection.py  test_model_server_client.py  test_node_discovery.py  test_orchestrator_protocol.py  test_order_entry_guard.py  test_portfolio_parser.py  test_quotes_parser.py  test_repl.py  test_session_keepalive.py  test_stock_info_parser.py  test_tech_guide_parser.py  test_version.py
tests/fixtures/: gainers_losers.html  market_closed.html  market_summary.html  most_active.html  portfolio_empty.html  portfolio_full.html  quote_down.html  quote_invalid.html  quote_up.html  stock_info.html  stock_info_invalid.html  tech_guide.html  tech_guide_top.html  top_buyers.html  top_sellers.html  trade_prices.html
(+9 files in other folders)
