[project]
name = "colfin-harness"
version = "0.5.0"
description = "Local multi-agent harness for the COL Financial trading platform, built around an MLX vision-language model"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "mlx>=0.32.0; sys_platform == 'darwin'",
    "mlx-vlm>=0.6.4; sys_platform == 'darwin'",
    "playwright>=1.61.0",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.2",
    "discord-py>=2.4",
]

[dependency-groups]
dev = ["pytest>=9.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colfin_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
